--- a/css/main.css
+++ b/css/main.css
@@ -38,7 +38,7 @@ section {
     min-width: 15rem;
 }
 
-.container {
+.conatiner {
     width: 85%;
     margin: 0 auto;
     max-width: 65rem;
@@ -121,7 +121,7 @@ section {
     /* border: 1px solid red; */
 }
 
-span {
+.featured__details span {
     display: block;
     font-weight: 700;
     font-size: 2.5rem;
@@ -130,6 +130,12 @@ span {
 .featured_items:hover,
 .featured_items:focus {
     transform: scale(1);
+}
+
+.featured__item:hover .featured__details,
+.featured__item:focus .featured__details {
+    opacity: 1;
+    text-shadow: 0 0 2em white;
 }
 
 .featured_items::after {
@@ -152,4 +158,69 @@ span {
 .featured_items:focus .featured__details {
     opacity: 1;
     text-shadow: 0 0 2em rgba(#fff, 1);
+}
+
+.product {
+    background: radial-gradient(var(--clr-inner, limegreen), var(--clr-outer, purple));
+    padding: 3rem;
+    border-radius: 1rem;
+    margin-bottom: 3rem;
+    text-align: center;
+}
+
+.product__title {
+    font-size: clamp(3rem, calc(5vw + 1rem), 5.5rem);
+    text-transform: uppercase;
+    line-height: 1.1;
+    color: #fff;
+    text-shadow: 0 0 0.2rem rgba(#000, 0.2);
+}
+
+.hero {
+    --clr-accent: #faa700;
+}
+
+.shoe-red {
+    --clr-inner: #faa700;
+    --clr-outer: #e48d00;
+    --clr-accent: #a1173c;
+}
+
+.shoe-white {
+    --clr-inner: #fce4b3;
+    --clr-outer: #eac886;
+    --clr-accent: #2f4858;
+}
+
+.shoe-blue {
+    --clr-inner: #6dd5ed;
+    --clr-outer: #2193b0;
+    --clr-accent: #008951;
+}
+
+.product__image {
+    margin: -5rem 0 0 0;
+}
+
+@media (min-width: 45em) {
+    .product {
+        text-align: left;
+        margin-bottom: 9em;
+    }
+    .product__title {
+        margin: 0;
+    }
+    .product__image {
+        float: right;
+        width: 65%;
+        shape-outside: url(../img/shoe-1.png);
+        shape-margin: 1em;
+        margin: 0 -5em 0 0;
+    }
+    .product.shoe-left .product__image {
+        float: left;
+        shape-outside: url(../img/shoe-2.png);
+        margin: 0 0 0 -5em;
+        shape-margin: 2em;
+    }
 }
